--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
   <meta charset="utf-8">
   <title>Portafolio de Ximena</title>
 </head>
-<body>
-  <h1>¡Hola, soy Ximena! 👋</h1>
-  <p>Estudiante de Desarrollo de Software | Apasionada por el Frontend 🎨💻</p>
+ 
+<h1 align="center">¡Hola, soy Ximena! 👋</h1>
+<p align="center">
+  Estudiante de <strong>Desarrollo de Software</strong> | Apasionada por el <strong>Frontend</strong> 🎨💻
+</p>
 
-  <h2>Tecnologías</h2>
-  <ul>
-    <li>Java</li>
-    <li>C</li>
-    <li>HTML5</li>
-    <li>CSS3</li>
-  </ul>
 
-  <h2>Contacto</h2>
-  <p>Email: <a href="mailto:tuemail@gmail.com">tuemail@gmail.com</a></p>
-</body>
-</html>
+## 🛠 Tecnologías  
+<p align="left">
+  <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
+  <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+  <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+  <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+</p>
+
+## 📊 Mis estadísticas en GitHub
+![Estadísticas de GitHub](https://github-readme-stats.vercel.app/api?username=Ximenahinestroza1&show_icons=true&theme=tokyonight)
+![Lenguajes más usados](https://github-readme-stats.vercel.app/api/top-langs/?username=Ximenahinestroza1&layout=compact&theme=tokyonight)
+
+
+## Contacto 
+<p align="left">
+  <a href="mailto:ximenahinestroza0@gmail.com"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
+
+</p>
