--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
-<!doctype html>
+ <!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Portafolio de Ximena</title>
 </head>
- 
-<h1 align="center">¡Hola, soy Ximena! 👋</h1>
-<p align="center">
-  Estudiante de <strong>Desarrollo de Software</strong> | Apasionada por el <strong>Frontend</strong> 🎨💻
-</p>
+<body>
 
+  <h1 align="center">¡Hola, soy Ximena! 👋</h1>
+  <p align="center">
+    Estudiante de <strong>Desarrollo de Software</strong> | Apasionada por el <strong>Frontend</strong> 🎨💻
+  </p>
 
-## 🛠 Tecnologías  
-<p align="left">
-  <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
-  <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
-  <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
-  <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
-</p>
+  <h2>🚀 Tecnologías</h2>
+  <p align="left">
+    <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
+    <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+    <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+    <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+  </p>
 
-## 📊 Mis estadísticas en GitHub
-![Estadísticas de GitHub](https://github-readme-stats.vercel.app/api?username=Ximenahinestroza1&show_icons=true&theme=tokyonight)
-![Lenguajes más usados](https://github-readme-stats.vercel.app/api/top-langs/?username=Ximenahinestroza1&layout=compact&theme=tokyonight)
+  <h3>📊 Mis estadísticas en GitHub</h3>
+  <p>
+    <img src="https://github-readme-stats.vercel.app/api?username=Ximenahinestroza1&show_icons=true&theme=tokyonight" alt="Estadísticas de GitHub"/>
+    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Ximenahinestroza1&layout=compact&theme=tokyonight" alt="Lenguajes más usados"/>
+  </p>
 
+  <h4>📩 Contacto</h4>
+  <p align="left">
+    <a href="mailto:ximenahinestroza0@gmail.com">
+      <img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/>
+    </a>
+  </p>
 
-## Contacto 
-<p align="left">
-  <a href="mailto:ximenahinestroza0@gmail.com"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
-
-</p>
+</body>
+</html>
