--- a/index.html
+++ b/index.html
@@ -1,36 +1,91 @@
- <!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Portafolio de Ximena</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f7fa;
+      color: #333;
+    }
+
+    header {
+      background: #6c63ff;
+      color: white;
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+    }
+
+    header p {
+      font-size: 18px;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      color: #6c63ff;
+      text-align: center;
+    }
+
+    .tecnologias img {
+      margin: 10px;
+    }
+
+    .contacto {
+      text-align: center;
+    }
+
+    .contacto a img {
+      margin-top: 10px;
+    }
+
+    footer {
+      background: #6c63ff;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
 
-  <h1 align="center">¡Hola, soy Ximena! 👋</h1>
-  <p align="center">
-    Estudiante de <strong>Desarrollo de Software</strong> | Apasionada por el <strong>Frontend</strong> 🎨💻
-  </p>
+  <header>
+    <h1>¡Hola, soy Ximena! 👋</h1>
+    <p>Estudiante de <strong>Desarrollo de Software</strong> | Apasionada por el <strong>Frontend</strong> 🎨💻</p>
+  </header>
 
-  <h2>🚀 Tecnologías</h2>
-  <p align="left">
-    <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
-    <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
-    <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
-    <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
-  </p>
+  <section>
+    <h2>🚀 Tecnologías</h2>
+    <div class="tecnologias" align="center">
+      <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
+      <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+      <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+      <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+    </div>
+  </section>
 
-  <h3>📊 Mis estadísticas en GitHub</h3>
-  <p>
-    <img src="https://github-readme-stats.vercel.app/api?username=Ximenahinestroza1&show_icons=true&theme=tokyonight" alt="Estadísticas de GitHub"/>
-    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Ximenahinestroza1&layout=compact&theme=tokyonight" alt="Lenguajes más usados"/>
-  </p>
+  <section class="contacto">
+    <h2>📩 Contacto</h2>
+    <a href="mailto:ximenahinestroza0@gmail.com"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
+  </section>
 
-  <h4>📩 Contacto</h4>
-  <p align="left">
-    <a href="mailto:ximenahinestroza0@gmail.com">
-      <img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/>
-    </a>
-  </p>
+  
 
 </body>
 </html>
